--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -5,6 +5,11 @@
 set-option -g mouse on
 # Set the terminal's color capability to 256 colors. TMUX will then set its $TERM environment variable to this value.
 set -g default-terminal "tmux-256color"
+# By default TMUX uses a login shell which I don't want since I've already run the login shell by
+# the time I launch TMUX and running it again was causing the $PATH to get messed up. More on how it
+# was messed up (TLDR: macOS moves its $PATH entries to the front if you rerun its path_helper):
+# https://gist.github.com/Linerre/f11ad4a6a934dcf01ee8415c9457e7b2#what-does-it-break
+set -g default-command "default-shell"
 # don't allow programs running in a pane to change the window title with an escape sequence
 set-option -g allow-rename off
 # Let tmux automatically rename windows, unless I manually set a name for that window
