--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -116,7 +116,7 @@ bind-key -n M-BSpace last-window
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
-set -g @is_vim "ps -o state= -o comm= -t \"$(tmux display-message -p '#{pane_tty}')\" | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+set -g @is_vim "ps -o state= -o comm= -t \"$(tmux display-message -p '#{pane_tty}')\" | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?|.nvim-wrapped)(diff)?$'"
 bind-key -n M-h if-shell "#{@is_vim}" 'send-keys M-h'  'select-pane -L -Z'
 bind-key -n M-j if-shell "#{@is_vim}" 'send-keys M-j'  'select-pane -D -Z'
 bind-key -n M-k if-shell "#{@is_vim}" 'send-keys M-k'  'select-pane -U -Z'
