--- a/.envrc
+++ b/.envrc
@@ -10,6 +10,7 @@ nix_direnv_manual_reload
 use flake
 
 # I want to use my nix wrapper so I need to prepend my bin after the flake bin is added.
+PATH_rm ~/.local/bin
 PATH_add ~/.local/bin
 
 yellow='\e[33m'
