--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -17,7 +17,14 @@ set -g automatic-rename on
 set -g automatic-rename-format '#{pane_title}'
 set-option -g renumber-windows on
 setw -g aggressive-resize on
-set -s escape-time 0
+# This seems like a reasonable value, based on the discussions here on a new default:
+# https://github.com/tmux/tmux/issues/3844
+#
+# TODO: When the issue's closed I should probably remove this.
+#
+# NOTE: When I had this set to 0, vscode would put print a weird character sequence to the terminal
+# whenever I focused it while I was in TMUX. Increasing this fixed that.
+set -s escape-time 15
 # have window indices start from 1
 set -g base-index 1
 set -g prefix C-Space
