--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -49,10 +49,6 @@ set -ga terminal-features "*:RGB"
 # underline styles
 set -ga terminal-features "*:usstyle"
 
-# Border characters for statusbar indicators
-set -g @left_symbol ""
-set -g @right_symbol ""
-
 # change highlight color
 set -g mode-style "fg=colour0,bg=colour3"
 set -g fill-character '╱'
@@ -158,7 +154,8 @@ bind-key -T root MouseUp1StatusLeft \
         "New Session" s { new-session } \
         "Rename Session" r { command-prompt -I "#S" { rename-session "%%" } } \
         "Choose Session" c { choose-tree -Zs } \
-        "Copy Mode" y { copy-mode }
+        "Copy Mode" y { copy-mode } \
+        "Pane Sync Mode" p { setw synchronize-panes }
 
 bind '|' split-window -h -c '#{pane_current_path}'
 bind '-' split-window -v -c '#{pane_current_path}'
@@ -203,8 +200,8 @@ set -g window-status-current-format ''
 # Left half of status bar
 set -g @digit_icon "python -c \"import sys; index = int(sys.argv[1]); digit_icons = ['󰬺 ', '󰬻 ', '󰬼 ', '󰬽 ', '󰬾 ', '󰬿 ', '󰭀 ', '󰭁 ', '󰭂 ']; print(digit_icons[index - 1] if index <= 9 else '󰿮 ')\""
 set -g @window-status-format "#[range=window|#{window_index}]#[fg=colour15] #(#{@digit_icon} #I)#[fg=default dim]#W#[nodim]"
-set -g @window-status-current-format "#[range=window|#{window_index}]#[fg=#{@accentcolor}] #(#{@digit_icon} #I)#[fg=default]#W#{?window_zoomed_flag,  ,}"
-set -g @window-info-format "#{W:#{E:@window-status-format}  ,#{E:@window-status-current-format}  }#[range=right] #[fg=colour15] "
+set -g @window-status-current-format "#[range=window|#{window_index}]#[fg=#{@accentcolor}] #(#{@digit_icon} #I)#[fg=default]#W#{?window_zoomed_flag, #[fg=colour3] #[fg=default],}#{?pane_synchronized, #[fg=colour3] #[fg=default],}"
+set -g @window-info-format "#{W:#{E:@window-status-format}  ,#{E:@window-status-current-format}  }#[range=right] #[fg=colour15] "
 # TODO: Setting this causes the tmux_mode_indicator to rerender which makes the reload indicator
 # flash. Maybe I can find a way to only set this if something changes or see if this can be
 # addressed in tmux_mode_indicator.  Until then, I moved the reload indicator logic to here so it
@@ -238,25 +235,28 @@ set -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
 # platform where resurrect can retain spaces in arguments, without splitting them into separate
 # arguments, is Linux with the 'linux_procfs' strategy. So here I only set arguments to be replaced
 # if I'm on Linux. issue: https://github.com/tmux-plugins/tmux-resurrect/issues/60
-set -g @edit_resurrect '"~edit->edit"'
+set -g @nvim_resurrect '"~nvim->nvim"'
 if-shell "uname | grep -q Linux" {
     # TODO: Restoring commands with spaces is not working on Linux, though it should with procfs as
     # the restore strategy. Until it's fixed, I will not restore arguments on Linux either for the
     # reason in the TODO above.
-    set -g @edit_resurrect '"~edit->edit"'
+    set -g @nvim_resurrect '"~nvim->nvim"'
 }
 # "~sh" is to match "/bin/sh <path_to_man> <manpage>"
-set -gF @resurrect-processes 'watch viddy #{@edit_resurrect} ssh autossh man ~sh less tail fzf cloudflared "~nix repl->nix repl"'
+set -gF @resurrect-processes 'watch viddy #{@nvim_resurrect} ssh autossh man ~sh less tail fzf cloudflared "~nix repl->nix repl"'
 # This strategy can restore quotes on the commandline so that the spaces in arguments are retained.
 # e.g. `echo 'one argument with spaces'`. Only supports linux though
 if-shell "uname | grep -q Linux" "set -g @resurrect-save-command-strategy 'linux_procfs'"
 set -g @resurrect-capture-pane-contents 'on'
 
 # tmux-mode-indicator
-set -g @mode_indicator_prefix_prompt "#[bold bg=default fg=#{@standoutcolor} align=right]#[blink]󰌌  PREFIX "
-set -g @mode_indicator_sync_prompt "#[bold bg=default fg=#{@standoutcolor} align=right]#{@left_symbol}#[reverse]  SYNC#[noreverse]#{@right_symbol} "
-set -g @mode_indicator_copy_prompt '#[bg=default] '
 set -g @mode_indicator_empty_prompt '#[range=left]#[bg=default fg=#{@standoutcolor} align=right] #S '
+set -g @mode_indicator_prefix_prompt "#[bold bg=default fg=#{@standoutcolor} align=right]#[blink]󰌌  PREFIX "
+# I have an indicator for this embedded in the border of the pane in copy-mode so I don't need one
+# here
+set -gF @mode_indicator_copy_prompt '#{@mode_indicator_empty_prompt}'
+# I have an indicator for this next to the window name so I don't need one here
+set -gF @mode_indicator_sync_prompt '#{@mode_indicator_empty_prompt}'
 
 # tmux-suspend
 set -g @suspend_key 'M-z'
