--- a/flake-modules/bundler/gozip/gomod2nix.toml
+++ b/flake-modules/bundler/gozip/gomod2nix.toml
@@ -5,8 +5,23 @@ schema = 3
     version = "v0.0.0-20220514003247-ea439de1c459"
     hash = "sha256-jKNFARY6VUnhVIdkw/kMHA9m8KyrtT3Obi9721St5oU="
   [mod."github.com/klauspost/compress"]
-    version = "v1.16.5"
-    hash = "sha256-m4wBSvrFyp//S4dB6S9ggEVFxNWTiJ8RBuucscuMDAs="
+    version = "v1.17.7"
+    hash = "sha256-UkW+tAFEZYj067z9gXDQjQx0dCF8noCn5OSw/APh4oo="
+  [mod."github.com/mitchellh/colorstring"]
+    version = "v0.0.0-20190213212951-d06e56a500db"
+    hash = "sha256-dg5havre+NkxU85tbWXgdhjVtVnkNfTVa999HX+JVbQ="
+  [mod."github.com/rivo/uniseg"]
+    version = "v0.4.7"
+    hash = "sha256-rDcdNYH6ZD8KouyyiZCUEy8JrjOQoAkxHBhugrfHjFo="
+  [mod."github.com/schollz/progressbar/v3"]
+    version = "v3.14.2"
+    hash = "sha256-LgnZfRlsCOoTs4s+kgBj4wM93mlUQ7vzH8Jru/lBpyQ="
   [mod."golang.org/x/sync"]
-    version = "v0.2.0"
-    hash = "sha256-hKk9zsy2aXY7R0qGFZhGOVvk5qD17f6KHEuK4rGpTsg="
+    version = "v0.6.0"
+    hash = "sha256-LLims/wjDZtIqlYCVHREewcUOX4hwRwplEuZKPOJ/HI="
+  [mod."golang.org/x/sys"]
+    version = "v0.18.0"
+    hash = "sha256-bIFhfFp7Sj0E1gcE3X3l/jecCfSRLgrkb8f0Yr6tVR0="
+  [mod."golang.org/x/term"]
+    version = "v0.18.0"
+    hash = "sha256-lpze9arFZIhBV8Ht3VZyoiUwqPkeH2IwfXt8M3xljiM="
