--- a/.github/workflows/publish-shell-executable.yml
+++ b/.github/workflows/publish-shell-executable.yml
@@ -19,11 +19,12 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
+      fail-fast: false
     defaults:
       run:
         working-directory: './.dotfiles'
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           path: '.dotfiles'
       - uses: DeterminateSystems/nix-installer-action@main
