--- a/.github/workflows/cache-build-results.yml
+++ b/.github/workflows/cache-build-results.yml
@@ -18,13 +18,15 @@ jobs:
       matrix:
         # TODO: yabai only builds on macos-11, before this I was using macos-latest, an alias to
         # macos-12
-        os: [ubuntu-latest, macos-11]
+        os: [ubuntu-latest, macos-latest]
       fail-fast: false
     steps:
       - uses: actions/checkout@v4
         with:
           path: '.dotfiles'
       - uses: DeterminateSystems/nix-installer-action@main
+        with:
+          nix-installer-tag: v0.13.1
       - uses: cachix/cachix-action@v14
         with:
           name: bigolu
