--- a/.github/workflows/cache-build-results.yml
+++ b/.github/workflows/cache-build-results.yml
@@ -16,7 +16,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        # TODO: yabai won't build with macos-latest, which is currently an alias to macos-12
+        os: [ubuntu-latest, macos-11]
       fail-fast: false
     steps:
       - uses: actions/checkout@v4
