--- a/.github/workflows/publish-shell-executable.yml
+++ b/.github/workflows/publish-shell-executable.yml
@@ -34,7 +34,7 @@ jobs:
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
       - run: nix run .#nix -- bundle --show-trace --bundler .# .#shell
       - run: nix run .#nix -- bundle --show-trace --bundler .# .#shellMinimal
-      - run: nix run .#nix -- bundle --show-trace --bundler .# .#terminal
+      - run: NIXPKGS_ALLOW_UNFREE=1 nix run .#nix -- bundle --impure --show-trace --bundler .# .#terminal
       # Dereference the symlinks so I can upload the actual executables. The symlinks' names will
       # look like '{shell,terminal}(-minimal)?-x86_64-linux' so I'm using a glob pattern to match
       # them.
