--- a/.github/workflows/publish-shell-executable.yml
+++ b/.github/workflows/publish-shell-executable.yml
@@ -32,9 +32,9 @@ jobs:
         with:
           name: bigolu
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-      - run: nix run .#nix -- bundle --show-trace --bundler .# .#shell
-      - run: nix run .#nix -- bundle --show-trace --bundler .# .#shellMinimal
-      - run: NIXPKGS_ALLOW_UNFREE=1 nix run .#nix -- bundle --impure --show-trace --bundler .# .#terminal
+      - run: nix run --show-trace .#nix -- bundle --show-trace --bundler .# .#shell
+      - run: nix run --show-trace .#nix -- bundle --show-trace --bundler .# .#shellMinimal
+      - run: NIXPKGS_ALLOW_UNFREE=1 nix run --show-trace .#nix -- bundle --impure --show-trace --bundler .# .#terminal
       # Dereference the symlinks so I can upload the actual executables. The symlinks' names will
       # look like '{shell,terminal}(-minimal)?-x86_64-linux' so I'm using a glob pattern to match
       # them.
