--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -199,24 +199,15 @@ set -g window-status-current-format ''
 
 # Left half of status bar
 set -g @digit_icon "python -c \"import sys; index = int(sys.argv[1]); digit_icons = ['󰬺 ', '󰬻 ', '󰬼 ', '󰬽 ', '󰬾 ', '󰬿 ', '󰭀 ', '󰭁 ', '󰭂 ']; print(digit_icons[index - 1] if index <= 9 else '󰿮 ')\""
-set -g @window-status-format "#[range=window|#{window_index}]#[fg=colour15] #(#{@digit_icon} #I)#[fg=default dim]#W#[nodim]"
-set -g @window-status-current-format "#[range=window|#{window_index}]#[fg=#{@accentcolor}] #(#{@digit_icon} #I)#[fg=default]#W#{?window_zoomed_flag, #[fg=colour3] #[fg=default],}#{?pane_synchronized, #[fg=colour3] #[fg=default],}"
-set -g @window-info-format "#{W:#{E:@window-status-format}  ,#{E:@window-status-current-format}  }#[range=right] #[fg=colour15] "
-# TODO: Setting this causes the tmux_mode_indicator to rerender which makes the reload indicator
-# flash. Maybe I can find a way to only set this if something changes or see if this can be
-# addressed in tmux_mode_indicator.  Until then, I moved the reload indicator logic to here so it
-# doesn't flash. Now there's a little delay before it's shown.
+set -g @window-status-format "#[range=window|#{window_index}]#[fg=colour15] #(#{@digit_icon} #I)#[fg=default dim]#W#[nodim]  "
+set -g @window-status-current-format "#[range=window|#{window_index}]#[fg=#{@accentcolor}] #(#{@digit_icon} #I)#[fg=colour15][#[fg=default]#W#[fg=colour15]]#{?window_zoomed_flag, #[fg=colour3] #[fg=default],}#{?pane_synchronized, #[fg=colour3] #[fg=default],}"
+set -g @window-info-format "#{W:#{E:@window-status-format}  ,#{E:@window-status-current-format}  }#[range=right]#[fg=colour15] "
 set -g status-left "#{E:@window-info-format}"
 set -g status-left-length 999
-if-shell 'tmux show-options -g @config-loaded' {
-    set @mode_indicator_custom_prompt "#[bg=#{@bgcolor} fg=default]  RELOADING... "
-    refresh-client -S
-} {
-    set -g @config-loaded "1"
-}
+set @mode_indicator_custom_prompt "#[bg=#{@bgcolor} fg=default]  RELOADING..."
 
 # Right half of status bar
-set -g status-right '#{tmux_mode_indicator}'
+set -g status-right '#{tmux_mode_indicator} #[fg=colour15]│ #[fg=default]#[bold]TMUX '
 
 # Popups
 set -g popup-border-lines heavy
@@ -250,8 +241,8 @@ if-shell "uname | grep -q Linux" "set -g @resurrect-save-command-strategy 'linux
 set -g @resurrect-capture-pane-contents 'on'
 
 # tmux-mode-indicator
-set -g @mode_indicator_empty_prompt '#[range=left]#[bg=default fg=#{@standoutcolor} align=right] #S '
-set -g @mode_indicator_prefix_prompt "#[bold bg=default fg=#{@standoutcolor} align=right]#[blink]󰌌  PREFIX "
+set -g @mode_indicator_empty_prompt '#[range=left]#[bg=default fg=default align=right] #S'
+set -g @mode_indicator_prefix_prompt "#[bold bg=default fg=#{@standoutcolor} align=right]#[blink]󰌌  PREFIX"
 # I have an indicator for this embedded in the border of the pane in copy-mode so I don't need one
 # here
 set -gF @mode_indicator_copy_prompt '#{@mode_indicator_empty_prompt}'
@@ -269,7 +260,8 @@ set -g @suspend_suspended_options " \
     pane-border-format::#{l:#{?pane_active\\,#[bold] 󰌏  SUSPENDED \\,}}#{s/,/\\\\,/:pane-border-format}, \
 "
 
-# tmux-continuum: Uses tmux-resurrect to continuously save the current tmux session at a specified interval.
+# tmux-continuum: Uses tmux-resurrect to continuously save the current tmux session at a specified
+# interval.
 set -g @continuum-restore 'on' # Automatically restore session when tmux is started
 set -g @continuum-save-interval '1' # measured in minutes
 # }}}
