--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -112,7 +112,7 @@ bind-key -n M-8 select-window -t 8
 bind-key -n M-9 select-window -t 9
 
 # Make a new window by clicking the new window button
-bind-key -T root MouseUp1StatusRight new-window -c "#{pane_current_path}"
+bind-key -T root MouseUp1StatusLeft new-window -c "#{pane_current_path}"
 
 # Go to the previously selected window
 bind-key -n M-BSpace last-window
@@ -148,7 +148,7 @@ bind-key -T root MouseDown3Status \
         Kill X { kill-window } \
         Respawn R { respawn-window -k } \
         Rename n { command-prompt -F -I "#W" { rename-window -t "#{window_id}" "%%" } }
-bind-key -T root MouseUp1StatusLeft \
+bind-key -T root MouseUp1StatusRight \
     display-menu -O -t = -x M -y W \
         "New Window" w { new-window } \
         "New Session" s { new-session } \
@@ -186,7 +186,7 @@ set -g message-style "bg=#{@bgcolor},fg=#{@standoutcolor}"
 # Bars
 set -g status-interval 1
 set -g status on
-set -g @accentcolor 'colour7'
+set -g @accentcolor 'terminal'
 set -g @fgcolor 'terminal'
 set -g @bgcolor2 'colour15'
 set-hook -g client-focus-out "set -g @accentcolor 'colour15'; set -g @fgcolor 'colour15'"
@@ -199,15 +199,15 @@ set -g window-status-current-format ''
 
 # Left half of status bar
 set -g @digit_icon "python -c \"import sys; index = int(sys.argv[1]); digit_icons = ['󰬺 ', '󰬻 ', '󰬼 ', '󰬽 ', '󰬾 ', '󰬿 ', '󰭀 ', '󰭁 ', '󰭂 ']; print(digit_icons[index - 1] if index <= 9 else '󰿮 ')\""
-set -g @window-status-format "#[range=window|#{window_index}]#[fg=colour15] #(#{@digit_icon} #I)#[fg=default dim]#W#[nodim]  "
+set -g @window-status-format "#[range=window|#{window_index}]#[fg=colour15] #(#{@digit_icon} #I)#[fg=default dim] #W #[nodim]"
 set -g @window-status-current-format "#[range=window|#{window_index}]#[fg=#{@accentcolor}] #(#{@digit_icon} #I)#[fg=colour15][#[fg=default]#W#[fg=colour15]]#{?window_zoomed_flag, #[fg=colour3] #[fg=default],}#{?pane_synchronized, #[fg=colour3] #[fg=default],}"
-set -g @window-info-format "#{W:#{E:@window-status-format}  ,#{E:@window-status-current-format}  }#[range=right]#[fg=colour15] "
+set -g @window-info-format "#{W:#{E:@window-status-format}  ,#{E:@window-status-current-format}  }#[range=left]#[fg=colour15] "
 set -g status-left "#{E:@window-info-format}"
 set -g status-left-length 999
 set @mode_indicator_custom_prompt "#[bg=#{@bgcolor} fg=default]  RELOADING..."
 
 # Right half of status bar
-set -g status-right '#{tmux_mode_indicator} #[fg=colour15]│ #[fg=default]#[bold]TMUX '
+set -g status-right '#{tmux_mode_indicator} #[fg=colour15]│ #[fg=#{@accentcolor}]#[bold]TMUX '
 
 # Popups
 set -g popup-border-lines heavy
@@ -241,7 +241,7 @@ if-shell "uname | grep -q Linux" "set -g @resurrect-save-command-strategy 'linux
 set -g @resurrect-capture-pane-contents 'on'
 
 # tmux-mode-indicator
-set -g @mode_indicator_empty_prompt '#[range=left]#[bg=default fg=default align=right] #S'
+set -g @mode_indicator_empty_prompt '#[range=right]#[bg=default fg=default align=right] #S'
 set -g @mode_indicator_prefix_prompt "#[bold bg=default fg=#{@standoutcolor} align=right]#[blink]󰌌  PREFIX"
 # I have an indicator for this embedded in the border of the pane in copy-mode so I don't need one
 # here
