--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -208,6 +208,7 @@ set @mode_indicator_custom_prompt "#[bg=#{@bgcolor} fg=default]  RELOADING...
 
 # Right half of status bar
 set -g status-right '#{tmux_mode_indicator} #[fg=colour15]│ #[fg=#{@accentcolor}]#[bold]TMUX '
+set -g status-right-length 999
 
 # Popups
 set -g popup-border-lines heavy
