--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -28,7 +28,7 @@ set -s escape-time 15
 # have window indices start from 1
 set -g base-index 1
 set -g prefix C-Space
-set -g pane-border-format '#{?#{m/r:copy-mode,#{pane_mode}},#[bold]   COPY ,}'
+set -g pane-border-format '#{?#{m/r:copy-mode,#{pane_mode}},#[fg=terminal]   COPY MODE ,}'
 set-option -g display-time 2000
 set-option -g set-titles on
 set-option -g set-titles-string '#T'
@@ -50,7 +50,7 @@ set -ga terminal-features "*:RGB"
 set -ga terminal-features "*:usstyle"
 
 # change highlight color
-set -g mode-style "fg=colour0,bg=colour3"
+set -g mode-style "reverse"
 set -g fill-character '╱'
 
 # Clipboard copying
@@ -173,8 +173,8 @@ set -g pane-border-status bottom
 
 # Panes
 set -g pane-border-lines single
-set -gF pane-active-border-style "fg=colour15"
-set -g pane-border-style "fg=colour15"
+set -gF pane-active-border-style "fg=#{@bordercolor}"
+set -g pane-border-style "fg=#{@bordercolor}"
 
 # Clock Mode
 set -g clock-mode-colour 'cyan'
@@ -207,7 +207,7 @@ set -g status-left-length 999
 set @mode_indicator_custom_prompt "#[bg=#{@bgcolor} fg=default]  RELOADING..."
 
 # Right half of status bar
-set -g status-right '#{tmux_mode_indicator} #[fg=colour15]│ #[fg=#{@accentcolor}]#[bold]TMUX '
+set -g status-right '#{tmux_mode_indicator}  #[fg=colour15]  '
 set -g status-right-length 999
 
 # Popups
@@ -242,8 +242,8 @@ if-shell "uname | grep -q Linux" "set -g @resurrect-save-command-strategy 'linux
 set -g @resurrect-capture-pane-contents 'on'
 
 # tmux-mode-indicator
-set -g @mode_indicator_empty_prompt '#[range=right]#[bg=default fg=default align=right] #S'
-set -g @mode_indicator_prefix_prompt "#[bold bg=default fg=#{@standoutcolor} align=right]#[blink]󰌌  PREFIX"
+set -g @mode_indicator_empty_prompt '#[range=right]#[bg=default fg=colour15 align=right] #S'
+set -g @mode_indicator_prefix_prompt "#[bold bg=default fg=terminal align=right]#[blink]󰌌  PREFIX"
 # I have an indicator for this embedded in the border of the pane in copy-mode so I don't need one
 # here
 set -gF @mode_indicator_copy_prompt '#{@mode_indicator_empty_prompt}'
@@ -258,7 +258,7 @@ set -g @suspend_key 'M-z'
 # The `#{l:}` is so the formats inside of it don't get evaluated when this variable is set. This way
 # if the active pane changes, the suspended icon will move to the newly active pane.
 set -g @suspend_suspended_options " \
-    pane-border-format::#{l:#{?pane_active\\,#[bold] 󰌏  SUSPENDED \\,}}#{s/,/\\\\,/:pane-border-format}, \
+    pane-border-format::#{l:#{?pane_active\\,#[fg=terminal] 󰒲  SUSPENDED \\,}}#{s/,/\\\\,/:pane-border-format}, \
 "
 
 # tmux-continuum: Uses tmux-resurrect to continuously save the current tmux session at a specified
