--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -167,6 +167,11 @@ set -g @bordercolor 'colour8'
 set -g @standoutcolor 'colour7'
 set -g @bgcolor 'terminal'
 
+# context menu
+set -g menu-selected-style "fg=colour0 bg=colour7"
+set -g menu-border-style "fg=#{@bordercolor}"
+set -g menu-border-lines rounded
+
 # status bar configuration
 set -g status-position bottom
 set -g pane-border-status bottom
