--- a/dotfiles/nix/nix.conf
+++ b/dotfiles/nix/nix.conf
@@ -13,6 +13,10 @@ keep-outputs = true
 # Don't warn me that the git repository is dirty
 warn-dirty = false
 
+# Don't cache tarballs. This way if I do something like `nix run github:<repo>`, I will always get
+# the up-to-date source
+tarball-ttl = 0
+
 auto-allocate-uids = true
 substituters = https://cache.nixos.org https://cache.nixos.org/ https://nix-community.cachix.org
 trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= nix-community.cachix.org-1:mB9FSh9qf2dCimDSUo8Zy7bkq5CX+/rkCWyvRCYg3Fs=
