--- a/dotfiles/smart_plug/.envrc
+++ b/dotfiles/smart_plug/.envrc
@@ -1,9 +1,13 @@
 # shellcheck shell=bash
 
 source_up
-use flake '../../#smartPlug'
 
-# So debugpy can find the right python to use. The 2 dirnames remove '/bin/python' so we end up with
-# the python installation folder.
-VIRTUAL_ENV="$(dirname "$( dirname "$(realpath --canonicalize-existing "$(which python)")" )")"
-export VIRTUAL_ENV
+platform="$(uname -m)-$(uname -s | tr '[:upper:]' '[:lower:]')"
+release_artifact_url="https://github.com/bigolu/dotfiles/releases/download/master/firstaide-master-$platform"
+if uname | grep -q Linux; then
+  hash='sha256-4vQQscdoRI9XbCF5fAMhTgSPPuXFu5NEw5feoyjq8MU='
+else
+  hash='sha256-67wqDatM7CAusOiJhX2oMiJXOfVseXtN6JDtHWYZgnU='
+fi
+firstaide_path="$(fetchurl "$release_artifact_url" "$hash")"
+eval "$("$firstaide_path" hook)"
