--- a/.envrc
+++ b/.envrc
@@ -1,31 +1,11 @@
 # shellcheck shell=bash
 
-if ! has nix_direnv_version || ! nix_direnv_version 3.0.4; then
-  source_url \
-    "https://raw.githubusercontent.com/nix-community/nix-direnv/3.0.4/direnvrc" \
-    "sha256-DzlYZ33mWF/Gs8DDeyjr8mnVmQGx7ASYqA5WlxwvBG4="
+platform="$(uname -m)-$(uname -s | tr '[:upper:]' '[:lower:]')"
+release_artifact_url="https://github.com/bigolu/dotfiles/releases/download/master/firstaide-master-$platform"
+if uname | grep -q Linux; then
+  hash='sha256-4vQQscdoRI9XbCF5fAMhTgSPPuXFu5NEw5feoyjq8MU='
+else
+  hash='sha256-67wqDatM7CAusOiJhX2oMiJXOfVseXtN6JDtHWYZgnU='
 fi
-
-nix_direnv_manual_reload
-use flake
-
-# I want to use my nix wrapper so I need to prepend my bin after the flake bin is added.
-PATH_rm ~/.local/bin
-PATH_add ~/.local/bin
-
-yellow='\e[33m'
-reset='\e[m'
-function get_secret {
-  path="./secrets/$1"
-
-  if [ -f "$path" ]; then
-    cat "$path"
-  else
-    echo -e "[${yellow}warning${reset}] secret '$path' was not found" 1>&2
-  fi
-}
-
-NIX_CONFIG="access-tokens = github.com=$(get_secret 'github.txt')"
-export NIX_CONFIG
-BWS_ACCESS_TOKEN="$(get_secret 'bws.txt')"
-export BWS_ACCESS_TOKEN
+firstaide_path="$(fetchurl "$release_artifact_url" "$hash")"
+eval "$("$firstaide_path" hook)"
