--- a/.github/workflows/publish-shell-executable.yml
+++ b/.github/workflows/publish-shell-executable.yml
@@ -35,9 +35,8 @@ jobs:
           # TODO: This isn't working right now:
           # https://github.com/cachix/cachix-action/issues/169
           useDaemon: false
-      - run: nix run --show-trace .#nix -- bundle --show-trace --bundler .# .#shell
       - run: nix run --show-trace .#nix -- bundle --show-trace --bundler .# .#shellMinimal
-      - run: NIXPKGS_ALLOW_UNFREE=1 nix run --show-trace .#nix -- bundle --impure --show-trace --bundler .# .#terminal
+      - run: NIXPKGS_ALLOW_UNFREE=1 nix run --show-trace .#nix -- bundle --impure --show-trace --bundler .# .#terminalMinimal
       - run: nix run --show-trace .#nix -- bundle --show-trace --bundler .# .#firstaide
       # Dereference the symlinks so I can upload the actual executables. The symlinks' names will
       # look like '<name>-x86_64-linux' so I'm using a glob pattern to match
@@ -48,9 +47,10 @@ jobs:
           cp -L terminal-* ./tmp/
           cp -L firstaide-* ./tmp/
       - run: |
-          size="$(du -m ./tmp/shell-minimal-* | cut -f1)"
-          if (( "$size" > 250 )); then
-            echo "Minimal shell is too big: $size MB"
+          size="$(du -m ./tmp/shell-* | cut -f1)"
+          max_size='250'
+          if (( "$size" > "$max_size" )); then
+          echo "Shell is too big: $size MB. Max size: $max_size"
             exit 1
           fi
       - name: Upload executable
