print path to firstaide

--- a/dotfiles/smart_plug/.envrc
+++ b/dotfiles/smart_plug/.envrc
@@ -10,4 +10,8 @@ else
   hash='sha256-67wqDatM7CAusOiJhX2oMiJXOfVseXtN6JDtHWYZgnU='
 fi
 firstaide_path="$(fetchurl "$release_artifact_url" "$hash")"
+
+# The first time you enter the project, firstaide won't be on the PATH so print its location
+log_status "firstaide path: $firstaide_path"
+
 eval "$("$firstaide_path" hook)"
