--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -202,11 +202,15 @@ set -g status-style "bg=#{@bgcolor},fg=#{@fgcolor},push-default"
 set -g window-status-format ''
 set -g window-status-current-format ''
 
-# Left half of status bar
-set -g @digit_icon "python -c \"import sys; index = int(sys.argv[1]); digit_icons = ['󰬺 ', '󰬻 ', '󰬼 ', '󰬽 ', '󰬾 ', '󰬿 ', '󰭀 ', '󰭁 ', '󰭂 ']; print(digit_icons[index - 1] if index <= 9 else '󰿮 ')\""
-set -g @window-status-format "#[range=window|#{window_index}]#[fg=colour15] #(#{@digit_icon} #I)#[fg=default dim] #W #[nodim]"
-set -g @window-status-current-format "#[range=window|#{window_index}]#[fg=#{@accentcolor}] #(#{@digit_icon} #I)#[fg=colour15][#[fg=default]#W#[fg=colour15]]#{?window_zoomed_flag, #[fg=colour3] #[fg=default],}#{?pane_synchronized, #[fg=colour3] #[fg=default],}"
-set -g @window-info-format "#{W:#{E:@window-status-format}  ,#{E:@window-status-current-format}  }#[range=left]#[fg=colour15] "
+# with window title
+# set -g @window-status-format "#[range=window|#{window_index}]#[fg=colour15] #(#{@digit_icon} #I) #W"
+# set -g @window-status-current-format "#[range=window|#{window_index}]#[fg=#{@accentcolor}] #[underscore]#(#{@digit_icon} #I)#[nounderscore] #W#{?window_zoomed_flag, #[fg=colour3] #[fg=default],}#{?pane_synchronized, #[fg=colour3] #[fg=default],}"
+
+# without window title
+set -g @window-status-format "#[range=window|#{window_index}]#[fg=colour15] #(#{@digit_icon} #I)"
+set -g @window-status-current-format "#[range=window|#{window_index}]#[fg=#{@accentcolor}] #[underscore]#(#{@digit_icon} #I)#[nounderscore]#{?window_zoomed_flag, #[fg=colour3] #[fg=default],}#{?pane_synchronized, #[fg=colour3] #[fg=default],}"
+
+set -g @window-info-format "#{W:#{E:@window-status-format}  ,#{E:@window-status-current-format}  }#[range=left]#[fg=colour15]  "
 set -g status-left "#{E:@window-info-format}"
 set -g status-left-length 999
 set @mode_indicator_custom_prompt "#[bg=#{@bgcolor} fg=default]  RELOADING..."
@@ -218,6 +222,9 @@ set -g status-right-length 999
 # Popups
 set -g popup-border-lines heavy
 set -g popup-border-style "fg=#{@bordercolor}"
+
+# Left half of status bar
+set -g @digit_icon "python -c \"import sys; index = int(sys.argv[1]); digit_icons = ['󰬺 ', '󰬻 ', '󰬼 ', '󰬽 ', '󰬾 ', '󰬿 ', '󰭀 ', '󰭁 ', '󰭂 ']; print(digit_icons[index - 1] if index <= 9 else '󰿮 ')\""
 # }}}
 
 # Plugins {{{
