--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -17,18 +17,10 @@ set -g automatic-rename on
 set -g automatic-rename-format '#{pane_title}'
 set-option -g renumber-windows on
 setw -g aggressive-resize on
-# This seems like a reasonable value, based on the discussions here on a new default:
-# https://github.com/tmux/tmux/issues/3844
-#
-# TODO: When the issue's closed I should probably remove this.
-#
-# NOTE: When I had this set to 0, vscode would put print a weird character sequence to the terminal
-# whenever I focused it while I was in TMUX. Increasing this fixed that.
-set -s escape-time 15
 # have window indices start from 1
 set -g base-index 1
 set -g prefix C-Space
-set -g pane-border-format '#{?#{m/r:copy-mode,#{pane_mode}},#[fg=terminal]   COPY MODE ,}'
+set -g pane-border-format '#{?#{m/r:copy-mode,#{pane_mode}},#[fg=terminal align=centre]   COPY MODE ,}'
 set-option -g display-time 2000
 set-option -g set-titles on
 set-option -g set-titles-string '#T'
@@ -202,14 +194,14 @@ set -g status-style "bg=#{@bgcolor},fg=#{@fgcolor},push-default"
 set -g window-status-format ''
 set -g window-status-current-format ''
 
+# Left half of status bar
+set -g @digit_icon "sh -c 'case $0 in 1) printf %s 󰬺\\  ;; 2) printf %s 󰬻\\  ;; 3) printf %s 󰬼\\  ;; 4) printf %s 󰬽\\  ;; 5) printf %s 󰬾\\  ;; 6) printf %s 󰬿\\  ;; 7) printf %s 󰭀\\  ;; 8) printf %s 󰭁\\  ;; 9) printf %s 󰭂\\  ;; *) printf %s 󰿮\\  ;; esac'"
 # with window title
 # set -g @window-status-format "#[range=window|#{window_index}]#[fg=colour15] #(#{@digit_icon} #I) #W"
 # set -g @window-status-current-format "#[range=window|#{window_index}]#[fg=#{@accentcolor}] #[underscore]#(#{@digit_icon} #I)#[nounderscore] #W#{?window_zoomed_flag, #[fg=colour3] #[fg=default],}#{?pane_synchronized, #[fg=colour3] #[fg=default],}"
-
 # without window title
 set -g @window-status-format "#[range=window|#{window_index}]#[fg=colour15] #(#{@digit_icon} #I)"
 set -g @window-status-current-format "#[range=window|#{window_index}]#[fg=#{@accentcolor}] #[underscore]#(#{@digit_icon} #I)#[nounderscore]#{?window_zoomed_flag, #[fg=colour3] #[fg=default],}#{?pane_synchronized, #[fg=colour3] #[fg=default],}"
-
 set -g @window-info-format "#{W:#{E:@window-status-format}  ,#{E:@window-status-current-format}  }#[range=left]#[fg=colour15]  "
 set -g status-left "#{E:@window-info-format}"
 set -g status-left-length 999
@@ -222,9 +214,6 @@ set -g status-right-length 999
 # Popups
 set -g popup-border-lines heavy
 set -g popup-border-style "fg=#{@bordercolor}"
-
-# Left half of status bar
-set -g @digit_icon "python -c \"import sys; index = int(sys.argv[1]); digit_icons = ['󰬺 ', '󰬻 ', '󰬼 ', '󰬽 ', '󰬾 ', '󰬿 ', '󰭀 ', '󰭁 ', '󰭂 ']; print(digit_icons[index - 1] if index <= 9 else '󰿮 ')\""
 # }}}
 
 # Plugins {{{
@@ -270,7 +259,7 @@ set -g @suspend_key 'M-z'
 # The `#{l:}` is so the formats inside of it don't get evaluated when this variable is set. This way
 # if the active pane changes, the suspended icon will move to the newly active pane.
 set -g @suspend_suspended_options " \
-    pane-border-format::#{l:#{?pane_active\\,#[fg=terminal] 󰒲  SUSPENDED \\,}}#{s/,/\\\\,/:pane-border-format}, \
+    pane-border-format::#{l:#{?pane_active\\,#[fg=terminal align=centre] 󰒲  SUSPENDED \\,}}#{s/,/\\\\,/:pane-border-format}, \
 "
 
 # tmux-continuum: Uses tmux-resurrect to continuously save the current tmux session at a specified
