--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -236,7 +236,7 @@ if-shell "uname | grep -q Linux" {
     set -g @nvim_resurrect '"~nvim->nvim"'
 }
 # "~sh" is to match "/bin/sh <path_to_man> <manpage>"
-set -gF @resurrect-processes 'watch viddy #{@nvim_resurrect} ssh autossh man ~sh less tail fzf cloudflared "~nix repl->nix repl"'
+set -gF @resurrect-processes 'watch viddy #{@nvim_resurrect} ssh autossh man ~sh less tail fzf cloudflared "~nix repl->nix repl" gitui "git ui"'
 # This strategy can restore quotes on the commandline so that the spaces in arguments are retained.
 # e.g. `echo 'one argument with spaces'`. Only supports linux though
 if-shell "uname | grep -q Linux" "set -g @resurrect-save-command-strategy 'linux_procfs'"
