--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -183,7 +183,7 @@ set -g message-style "bg=#{@bgcolor},fg=#{@standoutcolor}"
 # Bars
 set -g status-interval 1
 set -g status on
-set -g @accentcolor 'terminal'
+set -g @accentcolor 'colour2'
 set -g @fgcolor 'terminal'
 set -g @bgcolor2 'colour15'
 set-hook -g client-focus-out "set -g @accentcolor 'colour15'; set -g @fgcolor 'colour15'"
@@ -200,9 +200,9 @@ set -g @digit_icon "sh -c 'case $0 in 1) printf %s 󰬺\\  ;; 2) printf %s 󰬻\
 # set -g @window-status-format "#[range=window|#{window_index}]#[fg=colour15] #(#{@digit_icon} #I) #W"
 # set -g @window-status-current-format "#[range=window|#{window_index}]#[fg=#{@accentcolor}] #[underscore]#(#{@digit_icon} #I)#[nounderscore] #W#{?window_zoomed_flag, #[fg=colour3] #[fg=default],}#{?pane_synchronized, #[fg=colour3] #[fg=default],}"
 # without window title
-set -g @window-status-format "#[range=window|#{window_index}]#[fg=colour15] #(#{@digit_icon} #I)"
-set -g @window-status-current-format "#[range=window|#{window_index}]#[fg=#{@accentcolor}] #[underscore]#(#{@digit_icon} #I)#[nounderscore]#{?window_zoomed_flag, #[fg=colour3] #[fg=default],}#{?pane_synchronized, #[fg=colour3] #[fg=default],}"
-set -g @window-info-format "#{W:#{E:@window-status-format}  ,#{E:@window-status-current-format}  }#[range=left]#[fg=colour15]  "
+set -g @window-status-format "#[range=window|#{window_index} fg=colour15] #(#{@digit_icon} #I)"
+set -g @window-status-current-format "#[range=window|#{window_index} us=#{@accentcolor} fg=#{@fgcolor}] #[underscore]#(#{@digit_icon} #I)#[nounderscore]#{?window_zoomed_flag, #[fg=colour3] #[fg=default],}#{?pane_synchronized, #[fg=colour3] #[fg=default],}"
+set -g @window-info-format "#{W:#{E:@window-status-format}  ,#{E:@window-status-current-format}  }#[range=left fg=colour15]  "
 set -g status-left "#{E:@window-info-format}"
 set -g status-left-length 999
 set @mode_indicator_custom_prompt "#[bg=#{@bgcolor} fg=default]  RELOADING..."
@@ -243,8 +243,8 @@ if-shell "uname | grep -q Linux" "set -g @resurrect-save-command-strategy 'linux
 set -g @resurrect-capture-pane-contents 'on'
 
 # tmux-mode-indicator
-set -g @mode_indicator_empty_prompt '#[range=right]#[bg=default fg=colour15 align=right] #S'
-set -g @mode_indicator_prefix_prompt "#[bold bg=default fg=terminal align=right]#[blink]󰌌  PREFIX"
+set -g @mode_indicator_empty_prompt '#[range=right bg=default fg=colour15 align=right] #S'
+set -g @mode_indicator_prefix_prompt "#[bold bg=default fg=terminal align=right blink]󰌌  PREFIX MODE"
 # I have an indicator for this embedded in the border of the pane in copy-mode so I don't need one
 # here
 set -gF @mode_indicator_copy_prompt '#{@mode_indicator_empty_prompt}'
