--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -201,7 +201,7 @@ set -g @digit_icon "sh -c 'case $0 in 1) printf %s 󰬺\\  ;; 2) printf %s 󰬻\
 # set -g @window-status-current-format "#[range=window|#{window_index}]#[fg=#{@accentcolor}] #[underscore]#(#{@digit_icon} #I)#[nounderscore] #W#{?window_zoomed_flag, #[fg=colour3] #[fg=default],}#{?pane_synchronized, #[fg=colour3] #[fg=default],}"
 # without window title
 set -g @window-status-format "#[range=window|#{window_index} fg=colour15] #(#{@digit_icon} #I)"
-set -g @window-status-current-format "#[range=window|#{window_index} us=#{@accentcolor} fg=#{@fgcolor}] #[underscore]#(#{@digit_icon} #I)#[nounderscore]#{?window_zoomed_flag, #[fg=colour3] #[fg=default],}#{?pane_synchronized, #[fg=colour3] #[fg=default],}"
+set -g @window-status-current-format "#[range=window|#{window_index} us=#{@accentcolor} fg=#{@fgcolor}] #[underscore]#(#{@digit_icon} #I)#[nounderscore]#{?window_zoomed_flag, #[fg=#{@accentcolor}] #[fg=default],}#{?pane_synchronized, #[fg=#{@accentcolor}] #[fg=default],}"
 set -g @window-info-format "#{W:#{E:@window-status-format}  ,#{E:@window-status-current-format}  }#[range=left fg=colour15]  "
 set -g status-left "#{E:@window-info-format}"
 set -g status-left-length 999
