--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -30,6 +30,10 @@ set-option -g allow-passthrough all
 # The output from ':checkhealth' in neovim says 'autoread' might not work if this isn't set.
 set-option -g focus-events on
 set-option -g detach-on-destroy off
+# This seems like a reasonable value, based on the discussions here on a new default:
+# https://github.com/tmux/tmux/issues/3844
+# They settled on 10, but that caused issue for me in vscode so I'm keeping 15
+set -s escape-time 15
 
 # Enable all terminal features
 set -ga terminal-features "*:hyperlinks"
