--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -156,6 +156,10 @@ bind-key -T root MouseUp1StatusRight \
 bind '|' split-window -h -c '#{pane_current_path}'
 bind '-' split-window -v -c '#{pane_current_path}'
 bind-key -n M-s choose-tree -Zs
+
+# reduce scroll speed in copy mode
+bind-key -T copy-mode-vi WheelUpPane send-keys -X scroll-up \; send-keys -X scroll-up
+bind-key -T copy-mode-vi WheelDownPane send-keys -X scroll-down \; send-keys -X scroll-down
 # }}}
 
 # Aesthetics {{{
@@ -220,6 +224,7 @@ set -g popup-border-style "fg=#{@bordercolor}"
 # tmux-better-mouse-mode
 set -g @scroll-without-changing-pane "on"
 set -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
+set -g @scroll-speed-num-lines-per-scroll '1'
 
 # tmux-resurrect: Saves the state of tmux to a file so it can be restored later
 #
