add a file explorer sidebar for tmux + other stuff

--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -271,4 +271,14 @@ set -g @suspend_suspended_options " \
 # interval.
 set -g @continuum-restore 'on' # Automatically restore session when tmux is started
 set -g @continuum-save-interval '1' # measured in minutes
+
+# tmux-sidebar
+set -g @sidebar-tree 'e'
+# The `rm` removes any existing broot socket files since broot won't work if the socket file already
+# exists.
+# TODO: broot should delete the socket file when it closes
+bind-key -n M-e if-shell "#{@is_vim}" 'send-keys M-e' \
+  { \
+    run-shell "$TMUX_PLUGIN_MANAGER_PATH"'tmux-sidebar/scripts/toggle.sh '"'"'rm /tmp/broot*; broot --conf "${XDG_CONFIG_HOME:-$HOME/.config}/broot/explorer-conf.hjson;${XDG_CONFIG_HOME:-$HOME/.config}/broot/conf.hjson" --listen #{pane_id},left,50'"'"' #{q:pane_id}' \
+  }
 # }}}
