--- a/dotfiles/tmux/tmux.conf
+++ b/dotfiles/tmux/tmux.conf
@@ -264,7 +264,8 @@ set -g @suspend_key 'M-z'
 # The `#{l:}` is so the formats inside of it don't get evaluated when this variable is set. This way
 # if the active pane changes, the suspended icon will move to the newly active pane.
 set -g @suspend_suspended_options " \
-    pane-border-format::#{l:#{?pane_active\\,#[fg=terminal align=centre] 󰒲  SUSPENDED \\,}}#{s/,/\\\\,/:pane-border-format}, \
+    pane-border-status::off, \
+    status::off, \
 "
 
 # tmux-continuum: Uses tmux-resurrect to continuously save the current tmux session at a specified
