--- a/.envrc
+++ b/.envrc
@@ -1,15 +1,38 @@
 # shellcheck shell=bash
 
-platform="$(uname -m)-$(uname -s | tr '[:upper:]' '[:lower:]')"
-release_artifact_url="https://github.com/bigolu/dotfiles/releases/download/master/firstaide-master-$platform"
-if uname | grep -q Linux; then
-  hash='sha256-+c7mTicwOXJxGjViKHkCAf3ZdOPKBCtyHa1bUlcbHws='
-else
-  hash='sha256-qhro3qVo2urW01OHVKpOUEpZ5WEOr9G65zRAWnrjFwo='
+if ! has nix_direnv_version || ! nix_direnv_version 3.0.4; then
+  source_url \
+    "https://raw.githubusercontent.com/nix-community/nix-direnv/3.0.4/direnvrc" \
+    "sha256-DzlYZ33mWF/Gs8DDeyjr8mnVmQGx7ASYqA5WlxwvBG4="
 fi
-firstaide_path="$(fetchurl "$release_artifact_url" "$hash")"
+nix_direnv_manual_reload
+use flake
+watch_file "$PWD/flake-modules/dev-shell.nix"
 
-# The first time you enter the project, firstaide won't be on the PATH so print its location
-log_status "firstaide path: $firstaide_path"
+# I want to use my nix wrapper so I need to prepend my bin after the flake bin is added.
+PATH_rm ~/.local/bin
+PATH_add ~/.local/bin
 
-eval "$("$firstaide_path" hook)"
+# secrets
+yellow='\e[33m'
+reset='\e[m'
+function get_secret {
+  path="./secrets/$1"
+
+  if [ -f "$path" ]; then
+    cat "$path"
+  else
+    echo -e "[${yellow}warning${reset}] secret '$path' was not found" 1>&2
+    return 1
+  fi
+}
+if github="$(get_secret 'github.txt')"; then
+  export NIX_CONFIG="access-tokens = github.com=$github"
+fi
+if bws="$(get_secret 'bws.txt')"; then
+  export BWS_ACCESS_TOKEN="$bws"
+fi
+IFS= readarray -d '' secret_files < <(find "$PWD/secrets" -type f \! -name .DS_Store -print0)
+for secret_file in "${secret_files[@]}"; do
+  watch_file "$secret_file"
+done
