--- a/dotfiles/smart_plug/.envrc
+++ b/dotfiles/smart_plug/.envrc
@@ -1,17 +1,5 @@
 # shellcheck shell=bash
 
 source_up
-
-platform="$(uname -m)-$(uname -s | tr '[:upper:]' '[:lower:]')"
-release_artifact_url="https://github.com/bigolu/dotfiles/releases/download/master/firstaide-master-$platform"
-if uname | grep -q Linux; then
-  hash='sha256-+c7mTicwOXJxGjViKHkCAf3ZdOPKBCtyHa1bUlcbHws='
-else
-  hash='sha256-qhro3qVo2urW01OHVKpOUEpZ5WEOr9G65zRAWnrjFwo='
-fi
-firstaide_path="$(fetchurl "$release_artifact_url" "$hash")"
-
-# The first time you enter the project, firstaide won't be on the PATH so print its location
-log_status "firstaide path: $firstaide_path"
-
-eval "$("$firstaide_path" hook)"
+use flake '../../#smartPlug'
+watch_file "$PWD/../../flake-modules/smart-plug.nix"
