--- a/dotfiles/direnv/direnv.toml
+++ b/dotfiles/direnv/direnv.toml
@@ -2,6 +2,7 @@
   warn_timeout = "1h"
   load_dotenv = true
   strict_env = true
+  hide_env_diff = true
 
 [whitelist]
 prefix = [ "~/.dotfiles", "~/code/bigolu.github.io", "~/code/practice", ]
